# fast-doc

./: .env.example  .gitignore  LICENSE  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_init.py  002_encounters.py  003_longitudinal.py  004_coding.py  005_rag.py  006_ops.py  007_indexes.py  008_widen_demographics.py  009_add_source_sha256.py  010_users.py  011_knowledge_document_status.py  012_admin_users.py  013_coding_suggestion_description.py  014_patient_provider_clinic_identifiers.py  015_emr_note_conversation_duration.py  016_emr_tasks.py  017_emr_note_source.py  018_emr_notes_updated_at.py
app/: main.py
app/core/: config.py  observability.py  security.py
app/db/: session.py
app/graph/: nodes.py  state.py  workflow.py
app/models/: __init__.py  admin_user.py  clinical.py  coding.py  ops.py  patients.py  providers.py  rag.py  users.py
app/services/: admin_user_service.py  audit_service.py  catalog_ingestion.py  chunker.py  coding_service.py  emr_service.py  guideline_ingestion.py  guideline_rag.py  image_enricher.py  llm_adapter.py  markdown_ingestion.py  mineru_service.py  patient_rag.py  patient_service.py  provider_service.py  user_service.py
docker/: docker-compose.yml
docs/: api-integration-guide.md  api-response-reference.md  frontend-encounter-report-api-guide.md
docs/deployment/: cloudflare-tunnel-ubuntu.md
docs/fixtures/: allergy_records.csv  diagnosis_records.csv  encounters.csv  lab_reports.csv  lab_results.csv  (+4 more)
scripts/: ingest_catalogs.py  ingest_guidelines.py  seed_fixtures.py
tests/: conftest.py  test_health.py
(+81 files in other folders)
